added classes for dancers

--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,11 @@ body, a:link, a:visited, a:active{
   border-radius:10px;
   position:absolute;
 }
+.blinkyDancer {
+  background-image: url(https://gfycat.com/bouncysolidanophelesmosquito);
+}
+.shyDancer{
+  border:10px solid green;
+  border-radius:10px;
+  position:absolute;
+}
