--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
-body, html{
+body, html {
   height:100%;
 }
-body{
+
+body {
   margin: 0px;
   background-color:#444;
   font-size: 18px;
 }
+
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
@@ -32,4 +34,14 @@ body, a:link, a:visited, a:active{
   border:10px solid green;
   border-radius:10px;
   position:absolute;
+}
+.bouncingDancer{
+  border:10px solid blue;
+  border-radius:10px;
+  position:absolute;
+  transition: .2s all ease;
+}
+.bounce{
+  border: 20px solid blue;
+  border-radius:20px;
 }
