--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body, html {
 body {
   margin: 0px;
   background-color:#444;
+  background-image: url('pumpkin.gif');
   font-size: 18px;
 }
 
@@ -27,25 +28,38 @@ body, a:link, a:visited, a:active {
 }
 
 .dancer {
-  border:10px solid red;
-  border-radius:10px;
   position:absolute;
 }
 
 .shyDancer {
-  border:10px solid green;
-  border-radius:10px;
   position:absolute;
 }
 
 .bouncingDancer {
-  border:10px solid blue;
-  border-radius:10px;
-  position:absolute;
+  position: absolute;
   transition: .2s all ease;
 }
 
 .bounce {
-  border: 20px solid blue;
-  border-radius: 20px;
+  /* border: 20px solid blue;
+  border-radius: 20px; */
+}
+
+@keyframes pulse_animation {
+  0% { transform: scale(1); }
+  30% { transform: scale(1); }
+  40% { transform: scale(1.08); }
+  50% { transform: scale(1); }
+  60% { transform: scale(1); }
+  70% { transform: scale(1.05); }
+  80% { transform: scale(1); }
+  100% { transform: scale(1); }
+}
+
+.bounce {
+  animation-name: pulse_animation;
+  animation-duration: 5000ms;
+  transform-origin:70% 70%;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
