--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,7 @@ body, html {
 }
 
 body {
-  margin: 0px;
-  background-color:#444;
+  margin: 10px;
   background-image: url('pumpkin.gif');
   font-size: 18px;
 }
@@ -13,18 +12,19 @@ body, a:link, a:visited, a:active {
   color: lightblue;
 }
 
-.title, .addDancerButton {
-  padding:5px 12px;
-  float:right;
-}
-
-.topbar {
-  height:32px;
-  background-color: #555;
+.addDancerButton {
+  background-color: orange;
+  font-family: monospace;
 }
 
 .title {
-  background-color: #777;
+  font-family: monospace;
+  color: orange;
+  float: right;
+}
+
+.title {
+  background-color: #000;
 }
 
 .dancer {
@@ -40,26 +40,25 @@ body, a:link, a:visited, a:active {
   transition: .2s all ease;
 }
 
-.bounce {
-  /* border: 20px solid blue;
-  border-radius: 20px; */
+/* .bouncer { */
+/*   width: 120px; */
+/*   height: auto; */
+/*   transition: all 3s cubic-bezier(0.25, 1.5, 0.75, 1.5); */
+/* } */
+
+/* .grow { */
+/*   width: 400px; */
+/*   height: 240px; */
+/* } */
+
+.smallerBouncer {
+  width: 120px;
+  height: auto;
+  transition: all 3s cubic-bezier(0.25, 1.5, 0.75, 1.5);
 }
 
-@keyframes pulse_animation {
-  0% { transform: scale(1); }
-  30% { transform: scale(1); }
-  40% { transform: scale(1.08); }
-  50% { transform: scale(1); }
-  60% { transform: scale(1); }
-  70% { transform: scale(1.05); }
-  80% { transform: scale(1); }
-  100% { transform: scale(1); }
-}
-
-.bounce {
-  animation-name: pulse_animation;
-  animation-duration: 5000ms;
-  transform-origin:70% 70%;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
